# LineSLAM

./: CMakeLists.txt  README.md  package.xml
launch/: lineslam.launch  lineslam.launch~  openni+rgbdslam.launch  qvga-kinect+rgbdslam.launch
src/: glviewer.cpp  glviewer.h  graph_manager.cpp  graph_manager.h  graph_mgr_io.cpp  landmark.cpp  main.cpp  matching_result.h  node.cpp  node.h  openni_listener.cpp  openni_listener.h  parameter_server.cpp  qt_gui.cpp  ros_service_ui.cpp  ros_service_ui.h  transformation_estimation.cpp  transformation_estimation.h  transformation_estimation_euclidean.cpp
src/line/: .cpp  TodoList.txt~  bug-fixed.txt  data_dir_list.txt  data_dir_list.txt~  edge_se3_lineendpts.cpp  edge_se3_lineendpts.cpp~  edge_se3_lineendpts.h  edge_se3_lineendpts.h~  edge_se3_ptxyz.cpp  edge_se3_ptxyz.h  essential_mat.cpp  five_point.cpp  five_point.cpp~  lineslam.cpp  lineslam.h  motion.cpp  utils.cpp  utils.h  vertex_lineendpts.cpp  vertex_lineendpts.h
